--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: "3.9"
 
 services:
   web:
-    build: .
-    container_name: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: myduka_web
     restart: always
     depends_on:
       - db
