--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
-version: "3.9"
+# version: "3.9"
 
-services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: myduka_web
-    restart: always
-    depends_on:
-      - db
-    ports:
-      - "5000:5000"
-    environment:
-      # Flask environment
-      FLASK_ENV: production
-      # SQLAlchemy connection string
-      SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://myDuka_user:myDuka_pass@db:5433/myduka_api
+# services:
+#   web:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     container_name: myduka_web
+#     restart: always
+#     depends_on:
+#       - db
+#     ports:
+#       - "5000:80"
+#     environment:
+#       # Flask environment
+#       FLASK_ENV: production
+#       # SQLAlchemy connection string
+#       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://myDuka_user:myDuka_pass@db:5432/myduka_api
 
-  db:
-    image: postgres:16
-    container_name: myduka_db
-    restart: always
-    environment:
-      POSTGRES_DB: myduka_api
-      POSTGRES_USER: myDuka_user
-      POSTGRES_PASSWORD: myDuka_pass
-    ports:
-      - "5433:5433"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+#   db:
+#     image: postgres:16
+#     container_name: myduka_db
+#     restart: always
+#     environment:
+#       POSTGRES_DB: myduka_api
+#       POSTGRES_USER: myDuka_user
+#       POSTGRES_PASSWORD: myDuka_pass
+#     ports:
+#       - "5432:5432"
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
